IDs can be URLs and users can submit IDs Also refactored tests  - generative tests shrink  - http route tests are separated from their generative tests